--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <EditText
-        android:id="@+id/txtUsernameLogin_customer"
+        android:id="@+id/edtUsernameLogin_customer"
         android:layout_width="306dp"
         android:layout_height="wrap_content"
         android:hint="Username"
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.156" />
 
     <EditText
-        android:id="@+id/txtPasswordLogin_customer"
+        android:id="@+id/edtPasswordLogin_customer"
         android:layout_width="306dp"
         android:layout_height="wrap_content"
         android:hint="Passwornd"
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtUsernameLogin_customer"
+        app:layout_constraintTop_toBottomOf="@id/edtUsernameLogin_customer"
         app:layout_constraintVertical_bias="0" />
 
     <TextView
@@ -39,10 +39,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.823"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtPasswordLogin_customer"
+        app:layout_constraintTop_toBottomOf="@id/edtPasswordLogin_customer"
         app:layout_constraintVertical_bias="0"/>
 
     <Button
+        android:id="@+id/btnLogin_customer"
         android:layout_width="306dp"
         android:layout_height="wrap_content"
         android:text="Login"
@@ -50,6 +51,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtPasswordLogin_customer"
+        app:layout_constraintTop_toBottomOf="@id/edtPasswordLogin_customer"
         app:layout_constraintVertical_bias="0.262" />
 </androidx.constraintlayout.widget.ConstraintLayout>
