--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,9 +10,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Home Fragment"
-        android:textSize="30sp"
         android:layout_centerInParent="true"
-        android:textColor="@color/lavender"/>
+        android:text="Home Fragment"
+        android:textColor="@color/lavender"
+        android:textSize="30sp" />
 
 </RelativeLayout>
