--- a/app/src/main/res/layout/activity_customer_home.xml
+++ b/app/src/main/res/layout/activity_customer_home.xml
@@ -37,7 +37,7 @@
         android:layout_marginTop="20dp"
         android:id="@+id/nav_view"
         android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header"
+        app:headerLayout="@layout/nav_header_customer"
         app:menu="@menu/nav_menu"
         app:itemIconTint="@color/lavender"
         app:itemTextColor="@color/lavender"/>
