--- a/app/src/main/res/layout/activity_hotel_home.xml
+++ b/app/src/main/res/layout/activity_hotel_home.xml
@@ -4,10 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Hotel.HotelHome">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello"/>
-</LinearLayout>
+    tools:context=".Hotel.HotelHome"/>
