--- a/app/src/main/res/layout/activity_hotel_home.xml
+++ b/app/src/main/res/layout/activity_hotel_home.xml
@@ -4,4 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Hotel.HotelHome"/>
+    tools:context=".Hotel.HotelHome" >
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout_hotel_home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPager_hotel_home"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
